--- a/frontend/brightcoders-frontend/src/index.css
+++ b/frontend/brightcoders-frontend/src/index.css
@@ -32,15 +32,15 @@ body,
   /* padding:0 10px; */
 }
 
-html, body {
+html,
+body {
   overflow-x: hidden;
+  /* font-size: 2.5%; */
 }
 
-
-
 @font-face {
-  font-family: 'Agraham';
-  src: url("../src/assets/fonts/AspireDemibold-YaaO.ttf") format('truetype');
+  font-family: "Agraham";
+  src: url("../src/assets/fonts/AspireDemibold-YaaO.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
@@ -56,9 +56,13 @@ html, body {
 }
 
 @keyframes fadeIn {
-  to { opacity: 1; }
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes fadeOut {
-  to { opacity: 0; }
+  to {
+    opacity: 0;
+  }
 }
