--- a/frontend/brightcoders-frontend/src/Css/Footer.css
+++ b/frontend/brightcoders-frontend/src/Css/Footer.css
@@ -202,6 +202,17 @@ button {
   color: #25d366;
 }
 
+.quick-links a {
+  text-decoration: none;
+  color: white;
+  transition: color 0.3s;
+}
+
+.quick-links a.active-link {
+  color: #0a84ff; /* highlight color */
+  font-weight: bold;
+}
+
 @media (max-width: 599px) {
   .footer {
     padding: 0;
