--- a/frontend/brightcoders-frontend/src/Css/Navbar.css
+++ b/frontend/brightcoders-frontend/src/Css/Navbar.css
@@ -121,13 +121,12 @@
     top: 0;
     left: 0;
     height: 100%;
-    width: 80%;
+    width: 50%;
     background: #e3e6f3;
     flex-direction: column;
     padding: 2rem;
     gap: 10px;
-    box-shadow: -2px 0 8px rgba(0, 0, 0, 0.2);
-    border: 1px solid red;
+    box-shadow: -2px 0 8px rgba(0, 0, 0, 0.90);
     z-index: 999;
   }
 
@@ -212,20 +211,26 @@
   .dropdown .sub-menu ul li {
     padding: 0;
   } */
-     .dropdown .sub-menu {
+  .dropdown .sub-menu {
     position: relative;
     top: 0;
     width: 80%;
     margin-left: 20%;
+    padding: 0;
+    margin-bottom: 1rem;
     box-shadow: none;
-
+    font-size: 80%;
     max-height: 0;
     overflow: hidden;
     opacity: 0;
 
-    transition:
-      max-height 0.35s ease,
-      opacity 0.25s ease;
+    transition: max-height 0.35s ease, opacity 0.25s ease;
+  }
+
+
+
+  .dropdown .sub-menu ul li{
+    padding: 0;
   }
 
   .dropdown.mobile-open .sub-menu {
