--- a/frontend/brightcoders-frontend/src/Css/TestimonialsCard.css
+++ b/frontend/brightcoders-frontend/src/Css/TestimonialsCard.css
@@ -121,21 +121,9 @@
     width: 100%;
   }
 
-  .slick-slide {
-    /* Reset scaling and opacity for mobile to prevent overflow/bugs */
-    transform: none !important;
-    opacity: 1 !important;
-  }
   .corousel-item {
     height: 260px;
     padding: 15px;
-  }
-
-  .slick-center {
-    /* Prevent the active slide from scaling up */
-    transform: none !important;
-    box-shadow: none !important;
-    border: none !important;
   }
 
   .testimonial-feedback {
@@ -170,8 +158,7 @@
     margin: 25px 10px 55px 10px;
   }
   .quotes-mark {
-    display: none;
-  }
+display: none;  }
 }
 
 /* ============================================================
@@ -180,19 +167,6 @@
 @media (min-width: 400px) and (max-width: 599px) {
   .corousel-item {
     height: 280px;
-  }
-
-  .slick-slide {
-    /* Reset scaling and opacity for mobile to prevent overflow/bugs */
-    transform: none !important;
-    opacity: 1 !important;
-  }
-
-  .slick-center {
-    /* Prevent the active slide from scaling up */
-    transform: none !important;
-    box-shadow: none !important;
-    border: none !important;
   }
 
   .testimonial-feedback {
@@ -217,7 +191,7 @@
   .slick-slide > div {
     margin: 30px 15px 60px 15px;
   }
-  .quotes-mark {
+  .quotes-mark{
     display: none;
   }
 }
@@ -286,6 +260,7 @@
   .quotes-mark {
     right: 2%;
   }
+ 
 }
 
 /* ============================================================
@@ -294,11 +269,12 @@
 @media (min-width: 1280px) and (max-width: 1599px) {
   .corousel-item {
     height: 330px;
+
   }
-  .corousel-item .testimonial-feedback {
+   .corousel-item .testimonial-feedback {
     height: 170px;
   }
-  .quotes-mark {
+   .quotes-mark {
     top: 0;
     right: 5%;
     margin-top: -20px;
