changed hero section

--- a/frontend/brightcoders-frontend/src/Css/Testimonials.css
+++ b/frontend/brightcoders-frontend/src/Css/Testimonials.css
@@ -30,7 +30,7 @@
 }
 
 .custom-shape-divider-top-1764543608 .shape-fill {
-  fill: red;
+  fill: #fe660ece;
 }
 
 /* ============================================================
